feat(semantic): 更新语义组件和路径分区功能
- 在多个类的文档注释中添加了 <p> 标签以改善格式
- 重构 PromptAssembler 中的系统提示，更新输出格式约束
- 将 PathStreetLayoutBuilder 中的 List 索引访问改为双端队列方法
- 扩展了系统提示中关于输出模式的详细说明和 JSON 模式定义
- 更新了语义组件类型和分区规则的相关文档说明